--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d8e398d
+	base = 7d0fd3a
 	trimbase = 
 	parent = release/hydro/husky_bringup
-	previous = 
+	previous = d8e398d
