--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e018338
+	base = 9933b90
 	trimbase = 
 	parent = debian/hydro/husky_bringup
-	previous = 
+	previous = e018338
