--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>husky_bringup</name>
-  <version>0.0.2</version>
+  <version>0.0.3</version>
   <description>Installation for Husky</description>
 
   <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
@@ -22,6 +22,7 @@
   <run_depend>nmea_navsat_driver</run_depend>
   <run_depend>robot_pose_ekf</run_depend>
   <run_depend>robot_upstart</run_depend>
+  <run_depend>sicktoolbox_wrapper</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>um6</run_depend>
 
