--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>husky_bringup</name>
-  <version>0.0.3</version>
+  <version>0.0.4</version>
   <description>Installation for Husky</description>
 
   <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
@@ -13,12 +13,12 @@
   <!-- For roslaunch_add_file_check() macro -->
   <build_depend>roslaunch</build_depend>
 
-  <run_depend>enu</run_depend>
-  <run_depend>husky_base</run_depend>
+  <run_depend version_gte="1.1.0">enu</run_depend>
+  <run_depend version_gte="0.0.4">husky_base</run_depend>
   <run_depend>husky_description</run_depend>
   <run_depend>husky_teleop</run_depend>
   <run_depend>imu_compass</run_depend>
-  <run_depend>nmea_comms</run_depend>
+  <run_depend version_gte="0.0.3">nmea_comms</run_depend>
   <run_depend>nmea_navsat_driver</run_depend>
   <run_depend>robot_pose_ekf</run_depend>
   <run_depend>robot_upstart</run_depend>
