--- a/package.xml
+++ b/package.xml
@@ -1,28 +1,26 @@
 <?xml version="1.0"?>
 <package>
   <name>husky_bringup</name>
-  <version>0.0.6</version>
-  <description>Installation for Husky</description>
+  <version>0.1.0</version>
+  <description>Clearpath Husky installation package</description>
 
-  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
+  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>
 
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <!-- For roslaunch_add_file_check() macro -->
   <build_depend>roslaunch</build_depend>
 
-  <run_depend version_gte="1.1.0">enu</run_depend>
-  <run_depend version_gte="0.0.4">husky_base</run_depend>
+  <run_depend>husky_base</run_depend>
   <run_depend>husky_description</run_depend>
-  <run_depend>husky_teleop</run_depend>
   <run_depend>imu_compass</run_depend>
-  <run_depend version_gte="0.0.3">nmea_comms</run_depend>
+  <run_depend>lms1xx</run_depend>
+  <run_depend>microstrain_3dmgx2_imu</run_depend>
+  <run_depend>nmea_comms</run_depend>
   <run_depend>nmea_navsat_driver</run_depend>
-  <run_depend>robot_pose_ekf</run_depend>
+  <run_depend>robot_localization</run_depend>
   <run_depend>robot_upstart</run_depend>
-  <run_depend>sicktoolbox_wrapper</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>um6</run_depend>
 
