--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f5ec15b
+	base = 0185321
 	trimbase = 
 	parent = release/indigo/husky_bringup
-	previous = 
+	previous = f5ec15b
