--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9e0fc51
+	base = fed58c3
 	trimbase = 
 	parent = debian/indigo/husky_bringup
-	previous = 
+	previous = 9e0fc51
