--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c437595
+	base = 3665255
 	trimbase = 
 	parent = rpm/indigo/husky_bringup
-	previous = 
+	previous = c437595
