--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,19 +4,13 @@ project(husky_bringup)
 find_package(catkin REQUIRED COMPONENTS roslaunch)
 
 catkin_package()
+catkin_add_env_hooks(50.husky_find_mag_config
+  SHELLS sh DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/env-hooks)
 
-roslaunch_add_file_check(launch/imu_config)
-roslaunch_add_file_check(launch/microstrain_config)
-roslaunch_add_file_check(launch/sick_config)
+roslaunch_add_file_check(launch)
 
-# These won't pass as long as we explicitly include a config file
-# from an absolute /etc path. Probably need to specify that location
-# in the environment instead.
-# roslaunch_add_file_check(launch/navsat_config)
-
-install(PROGRAMS scripts/install scripts/calibrate_compass
-  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+install(PROGRAMS scripts/install scripts/calibrate_compass scripts/compute_calibration 
+   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 install(DIRECTORY launch udev config
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
-
