--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0"?>
 <package>
   <name>husky_bringup</name>
-  <version>0.1.0</version>
-  <description>Clearpath Husky installation package</description>
+  <version>0.1.1</version>
+  <description>Clearpath Husky installation and integration package</description>
 
+  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
+  <author email="pbovbel@clearpathrobotics.com">Paul Bovbel</author>
+  
   <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>
 
   <license>BSD</license>
+
+  <url type="website">http://ros.org/wiki/husky_bringup</url>
+  <url type="bugtracker">https://github.com/husky/husky_bringup/issues</url>
+  <url type="repository">https://github.com/husly/husky_bringup</url>
 
   <buildtool_depend>catkin</buildtool_depend>
 
@@ -14,11 +21,13 @@
 
   <run_depend>husky_base</run_depend>
   <run_depend>husky_description</run_depend>
-  <run_depend>imu_compass</run_depend>
+  <run_depend>imu_filter_madgwick</run_depend>
+  <run_depend>imu_transformer</run_depend>
   <run_depend>lms1xx</run_depend>
   <run_depend>microstrain_3dmgx2_imu</run_depend>
   <run_depend>nmea_comms</run_depend>
   <run_depend>nmea_navsat_driver</run_depend>
+  <run_depend>python-scipy</run_depend>
   <run_depend>robot_localization</run_depend>
   <run_depend>robot_upstart</run_depend>
   <run_depend>tf</run_depend>
